added two new features

--- a/public/ques.html
+++ b/public/ques.html
@@ -14,11 +14,22 @@
     <main>
         <section class="question">
             <h2>Question 1</h2>
-            <p>Given an array , return the maximum of the array.</p> <br>
-            input: "[1,2,3,4,5]", <br>
-            output: "5"
+            <p>Given an array, return the maximum of the array.</p>
+            <p>Input: "[1, 2, 3, 4, 5]"</p>
+            <p>Output: "5"</p>
         </section>
-        <section class=""></section>
+        
+        <section class="solution">
+            <h2>Your Solution</h2>
+            <form action="/compile" method="POST">
+                <input type="hidden" name="userId" value="user1"> <!-- Replace with actual user ID -->
+                <input type="hidden" name="quesId" value="ques1"> <!-- Replace with actual problem ID -->
+                <label for="solution">Type your solution:</label>
+                <textarea id="solution" name="solution" rows="6" required></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </section>
+        
         <form action="/back" method="GET">
             <button type="submit">Go back</button>
         </form>
